New filters and sections

--- a/layouts/teamIcpc/single.html
+++ b/layouts/teamIcpc/single.html
@@ -31,6 +31,14 @@
     color: #333;
 }
 
+[data-dark-mode] .team-name {
+    font-weight: 700;
+    font-size: 1.1rem;
+    font-family: 'Fira Sans', sans-serif;
+    text-shadow: 0 0 2px rgba(0,0,0,0.08);
+    color: rgba(255, 0, 255, 0.866)
+}
+
 .table td:nth-child(2),
 .table th:nth-child(2) {
     text-align: center;
@@ -83,4 +91,5 @@
     </div>
   </div>
 </div>
+
 {{ end }}
